# lead360

./: .gitignore  ANALYZE.md  BACKGROUND_JOBS_FRONTEND_SUMMARY.md  BUILD_FIXES.md  CALENDAR_RESCHEDULE_FIX.md  CLAUDE.md  COMMUNICATION_MODULE_REVIEW.md  CRITICAL_BUGS_FIXED.md  CRITICAL_FIXES_APPLIED.md  DEBUGGING_INFO.md  DEPLOYMENT_CHECKLIST_TTS_STREAMING.md  DOCUMENTATION_UPDATE.md  EMAIL_TEMPLATE_SYSTEM_CHANGELOG.md  OAUTH_FLOW_COMPLETE.md  PUPPETEER_FIX_COMPLETE.md  QUICK_ACCESS_GUIDE.md  QUOTE_ENDPOINTS_COMPLETE_INVENTORY.md  RBAC_FIX_API_RESPONSE.md  RBAC_MODULE_IMPLEMENTATION_SUMMARY.md  RBAC_MODULE_SUMMARY.md  SPRINT_1_REVIEW_REPORT.md  SPRINT_27_AUDIT_REPORT.md  SPRINT_27_COMPLETION_SUMMARY.md  SPRINT_27_FINAL_REVIEW.md  SPRINT_30_AUDIT_REPORT.md  SPRINT_30_COMPLETION_REPORT.md  SPRINT_32_COMPLETION_SUMMARY.md  SPRINT_32_SECURITY_AUDIT.md  SPRINT_4_AUDIT_REPORT.md  SPRINT_7_ALL_FIXES_COMPLETE.md  SPRINT_7_API_DISCREPANCIES.md  SPRINT_7_API_FIXES_APPLIED.md  SPRINT_7_FINAL_STATUS.md  SPRINT_7_FIX_STATUS.md  SPRINT_7_IMPLEMENTATION_COMPLETE.md  SPRINT_9_TRANSFER_NUMBERS_COMPLETE.md  SPRINT_AI_WIZARD_5_COMPLETE.md  SPRINT_AI_WIZARD_5_REDESIGNED.md  SPRINT_IVR_2_COMPLETE.md  SPRINT_IVR_3_COMPLETION_REPORT.md  (+19 more)
agent/voice-ai/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
agent/voice-ai/agent/: config.py  context.py  lifecycle.py  llm.py  main.py  pipeline.py  prompt_builder.py  sip_handler.py  stt.py  tts.py  voice_agent.py  worker.py
agent/voice-ai/tests/: conftest.py  test_actions.py  test_context.py  test_lifecycle.py  (+1 more)
(+2868 files in other folders)
